API for API tokens is there
